<resources>
    <string name="app_name">cobaCRUD</string>
    <string name="button2">button2</string>
    <string name="buat_biodata_baru">Buat Biodata Baru</string>
    <string name="nama">Nama</string>
    <string name="nomor">Nomor</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="l_atau_p">L atau P</string>
    <string name="alamat">Alamat</string>
    <string name="simpan">Simpan</string>
    <string name="kembali">Kembali</string>
    <string name="textview">TextView</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="update">Update</string>
</resources>
